--- a/library.html
+++ b/library.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link href="stylesheet" href="style.css">
+    <title>LIBRARY STORE</title>
   </head>
   <body>
     <p>dsfsdfsdf</p>
