--- a/library.html
+++ b/library.html
@@ -3,15 +3,30 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style.css" />
     <title>LIBRARY STORE</title>
   </head>
   <body>
-    <p>dsfsdfsdf</p>
-    <h1>sdgsgsfds</h1>
-    <h2>ERISA ANITA ERISA ANITA HEEEHEHEHEHEHEHHEEHEHEHEHEHEHEHHEHEHEHEH</h2>
-    <h3>hahahahahha</h3>
-    <h4>ihuswhdodij</h4>
-    <h5>KRAHJETAAAAA</h5>
+    <div class="container">
+      <div class="text-section">
+        <div class="nav">
+          <a href="">HOME</a>
+          <a href="">ABOUT</a>
+          <a href="">PRODUCT</a>
+          <a href="">CONTACT</a>
+        </div>
+        <h1>Online library</h1>
+        <p>
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Totam,
+          magnam! Eveniet, tempore ipsum deleniti est quae culpa fugit nemo
+          harum non sunt magni tenetur incidunt perspiciatis, eaque maxime odio
+          molestiae?
+        </p>
+        <button>Learn more</button>
+      </div>
+      <div class="right-img">
+        <!-- foto ne css-->
+      </div>
+    </div>
   </body>
 </html>
