--- a/library.html
+++ b/library.html
@@ -1,32 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
     <title>LIBRARY STORE</title>
-  </head>
-  <body>
+</head>
+<body>
     <div class="container">
-      <div class="text-section">
-        <div class="nav">
-          <a href="">HOME</a>
-          <a href="">ABOUT</a>
-          <a href="">PRODUCT</a>
-          <a href="">CONTACT</a>
+        <div class="text-content">
+            <div class="nav">
+                <a href="">HOME</a>
+                <a href="">ABOUT</a>
+                <a href="">PRODUCT</a>
+                <a href="">CONTACT</a>
+            </div>
+            <h1>LIBRARY-STORE</h1>
+            <p>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Totam,
+                magnam! Eveniet, tempore ipsum deleniti est quae culpa fugit nemo
+                harum non sunt magni tenetur incidunt perspiciatis, eaque maxime odio
+                molestiae?
+            </p>
+            <button>Learn more</button>
         </div>
-        <h1>Online library</h1>
-        <p>
-          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Totam,
-          magnam! Eveniet, tempore ipsum deleniti est quae culpa fugit nemo
-          harum non sunt magni tenetur incidunt perspiciatis, eaque maxime odio
-          molestiae?
-        </p>
-        <button>Learn more</button>
-      </div>
-      <div class="right-img">
-        <!-- foto ne css-->
-      </div>
-    </div>
-  </body>
+        <img src="c:/git/Library-Store/PHOTTO.png" alt="Library Image" class="right-image">
+        
+</body>
 </html>
