--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>About</title>
+    <title>ABOUT US</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -32,8 +32,8 @@
             destination for inspiring reads. Browse our collection today and
             join us in celebrating the joy of books!
           </p>
-          <div class="bookshelf-img">
-            <img src="image-bookshelf.jpg" alt="" />
+          <div class="image-container">
+            <img src="c:\git\Library-Store\Library-Store\image-bookshelf.jpg" alt="" />
           </div>
         </div>
       </div>
