--- a/library.html
+++ b/library.html
@@ -7,13 +7,13 @@
     <title>LIBRARY STORE</title>
 </head>
 <body>
-    <div class="first-page">
+
         <section class="first">
             <div class="container">
                 <div class="text-content">
                     <div class="links">
                         <a href="">HOME</a>
-                        <a href="">ABOUT</a>
+                        <a href="http://127.0.0.1:5500/about.html">ABOUT</a>
                         <a href="">PRODUCT</a>
                         <a href="">CONTACT</a>
                     </div>
@@ -39,7 +39,6 @@
                 </div>
         
                 <div class="middle-side">
-                    <h1>About Us</h1>
                     <p>The Library Store is part of the Library Foundation of Pristina, which supports the Pristinas Public Library</p>
                 </div>
         
