--- a/about.html
+++ b/about.html
@@ -83,5 +83,31 @@
         <img src="third-photo.jpg" alt="" />
       </div>
     </section>
+    <section class="second">
+      <div class="footer-info">
+          <div class="left-side">
+              <h1>THE LIBRARY STORE</h1>
+              <a href="">About Us</a>
+              <a href="">Contact Us</a>
+              <a href="">Library Foundation</a>
+              <a href="">Privacy Policy</a>
+              <a href="">Terms of Service</a>
+              <a href="">Refund policy</a>
+          </div>
+  
+          <div class="middle-side">
+              
+              <p>The Library Store is part of the Library Foundation of Pristina, which supports the Pristinas Public Library</p>
+          </div>
+  
+          <div class="right-side">
+              <h1>Keep in touch</h1>
+              <p>Never Miss a Beat! Sign up for our newsletter and be the first to hear about new products, professional resources, limited edition merchandise, discounts and more when you sign up for our emails</p>
+              <input type="email" placeholder="email@example.com" class="email">
+          </div>
+      </div>
+
+  </section>
+  
   </body>
 </html>
