--- a/Login.html
+++ b/Login.html
@@ -49,7 +49,7 @@
                 <div class="toggle-panel toggle-left">
                     <h1>Welcome Back!</h1>
                     
-                    <button class="hidden" id="login">Sign In</button>
+                    <button class="hidden" id="login">Login</button>
                 </div>
                 <div class="toggle-panel toggle-right">
                     <h1>Hello, Welcome!</h1>
