--- a/about.html
+++ b/about.html
@@ -4,16 +4,22 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ABOUT US</title>
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="style.css" />
   </head>
 
   <body>
     <section class="about">
-      <div class="header-links">
-        <a href="">HOME</a>
-        <a href="http://127.0.0.1:5500/about.html">ABOUT</a>
-        <a href="">PRODUCT</a>
-        <a href="">CONTACT</a>
+      <div class="links">
+        <a href="./library.html">HOME</a>
+        <a href="./about.html">ABOUT</a>
+        <a href="./books.html">BOOKS</a>
+        <a href="./contact.html">CONTACT</a>
+        <div class="icons">
+          <a href="#"><i class='bx bx-heart'></i></i></a>
+          <a href="#"><i class='bx bx-cart'></i></a>
+          <a href="./login.html" class="icons_login">Login</a>
+      </div>
       </div>
 
       <div class="about-container">
@@ -35,14 +41,14 @@
           us in celebrating the joy of books!
         </p>
         <div class="first-image">
-          <img src="first-image.jpg" alt="" />
+          <img src="./images/first-image.jpg" alt="" />
         </div>
       </div>
     </section>
 
     <section class="second-about">
       <div class="second-image">
-        <img src="second-image.jpg" alt="" />
+        <img src="./images/second-image.jpg" alt="" />
       </div>
 
       <div class="second-about-container">
@@ -80,7 +86,7 @@
       </div>
 
       <div class="third-image">
-        <img src="third-photo.jpg" alt="" />
+        <img src="./images/third-photo.jpg" alt="" />
       </div>
     </section>
     <section class="second">
