--- a/Login.html
+++ b/Login.html
@@ -12,6 +12,10 @@
   </head>
 
   <body>
+    <a href="library.html" class="back-arrow">
+      <i class="fa-solid fa-arrow-left"></i> 
+    </a>
+    
     <div class="container" id="container">
       <div class="form-container sign-up">
         <form>
@@ -35,7 +39,7 @@
       </div>
       <div class="form-container sign-in">
         <form>
-          <h1>login</h1>
+          <h1>Login</h1>
           <div class="social-icons">
             <a href="#" class="icon"
               ><i class="fa-brands fa-google-plus-g"></i
