--- a/library.html
+++ b/library.html
@@ -6,25 +6,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="nav.css" />
     <title>LIBRARY STORE</title>
 </head>
 
 <body>
 
-    <section class="first">
+    <section class="home">
         <div class="container">
-            <div class="text-content">
-                <div class="links">
+            <nav class="links">
+                <ul>
                     <a href="./library.html">HOME</a>
                     <a href="./about.html">ABOUT</a>
                     <a href="./books.html">BOOKS</a>
                     <a href="./contact.html">CONTACT</a>
-                    <div class="icons">
-                        <a href="#"><i class='bx bx-heart'></i></i></a>
-                        <a href="#"><i class='bx bx-cart'></i></a>
-                        <a href="./login.html" class="icons_login">Login</a>
-                    </div>
+                </ul>
+                <div class="icons">
+                    <a href="#"><i class='bx bx-heart'></i></i></a>
+                    <a href="#"><i class='bx bx-cart'></i></a>
+                    <a href="./login.html" class="icons_login">Login</a>
                 </div>
+            </nav>
+            <div class="text-content">
                 <div class="content">
                     <h1>LIBRARY-STORE</h1>
                     <p>In times when material possessions seem fleeting and uncertain, libraries stand as eternal
@@ -33,36 +36,39 @@
                         necessities!</p>
                     <a class="learn-more" href="./about.html">Learn more</a>
                 </div>
-            </div>
-            <img src="./images/PHOTTO.png" alt="" class="right-image">
-
-    </section>
-    <section class="second">
-        <div class="footer-info">
-            <div class="left-side">
-                <h1>THE LIBRARY STORE</h1>
-                <a href="">About Us</a>
-                <a href="">Contact Us</a>
-                <a href="">Library Foundation</a>
-                <a href="">Privacy Policy</a>
-                <a href="">Terms of Service</a>
-                <a href="">Refund policy</a>
-            </div>
-
-            <div class="middle-side">
-                <p>The Library Store is part of the Library Foundation of Pristina, which supports the Pristinas Public
-                    Library</p>
-            </div>
-
-            <div class="right-side">
-                <h1>Keep in touch</h1>
-                <p>Never Miss a Beat! Sign up for our newsletter and be the first to hear about new products,
-                    professional resources, limited edition merchandise, discounts and more when you sign up for our
-                    emails</p>
-                <input type="email" placeholder="email@example.com" class="email">
+                <img src="./images/PHOTTO.png" alt="" class="right-image">
             </div>
         </div>
     </section>
+    <footer class="footer">
+        <div class="container">
+            <div class="footer-info">
+                <div class="left-side">
+                    <h1>THE LIBRARY STORE</h1>
+                    <a href="">About Us</a>
+                    <a href="">Contact Us</a>
+                    <a href="">Library Foundation</a>
+                    <a href="">Privacy Policy</a>
+                    <a href="">Terms of Service</a>
+                    <a href="">Refund policy</a>
+                </div>
+
+                <div class="middle-side">
+                    <p>The Library Store is part of the Library Foundation of Pristina, which supports the Pristinas
+                        Public
+                        Library</p>
+                </div>
+
+                <div class="right-side">
+                    <h1>Keep in touch</h1>
+                    <p>Never Miss a Beat! Sign up for our newsletter and be the first to hear about new products,
+                        professional resources, limited edition merchandise, discounts and more when you sign up for our
+                        emails</p>
+                    <input type="email" placeholder="email@example.com" class="email">
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
