--- a/about.html
+++ b/about.html
@@ -1,30 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ABOUT US</title>
-    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <link rel="stylesheet" href="style.css" />
-  </head>
 
-  <body>
-    <section class="about">
-      <div class="links">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>ABOUT US</title>
+  <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="nav.css" />
+</head>
+
+<body>
+  <div class="container">
+    <nav class="links">
+      <ul>
         <a href="./library.html">HOME</a>
         <a href="./about.html">ABOUT</a>
         <a href="./books.html">BOOKS</a>
         <a href="./contact.html">CONTACT</a>
-        <div class="icons">
-          <a href="#"><i class='bx bx-heart'></i></i></a>
-          <a href="#"><i class='bx bx-cart'></i></a>
-          <a href="./login.html" class="icons_login">Login</a>
+      </ul>
+      <div class="icons">
+        <a href="#"><i class='bx bx-heart'></i></i></a>
+        <a href="#"><i class='bx bx-cart'></i></a>
+        <a href="./login.html" class="icons_login">Login</a>
       </div>
-      </div>
+    </nav>
 
+    <section class="about">
       <div class="about-container">
         <h1>ABOUT THE LIBRARY STORE</h1>
-        
+
         <p>
           The Online Library Store is a unique, non-profit platform dedicated to
           book lovers everywhere. We offer a carefully curated collection of
@@ -44,6 +49,7 @@
           <img src="./images/first-image.jpg" alt="" />
         </div>
       </div>
+
     </section>
 
     <section class="second-about">
@@ -89,31 +95,37 @@
         <img src="./images/third-photo.jpg" alt="" />
       </div>
     </section>
-    <section class="second">
-      <div class="footer-info">
-          <div class="left-side">
-              <h1>THE LIBRARY STORE</h1>
-              <a href="">About Us</a>
-              <a href="">Contact Us</a>
-              <a href="">Library Foundation</a>
-              <a href="">Privacy Policy</a>
-              <a href="">Terms of Service</a>
-              <a href="">Refund policy</a>
-          </div>
-  
-          <div class="middle-side">
-              
-              <p>The Library Store is part of the Library Foundation of Pristina, which supports the Pristinas Public Library</p>
-          </div>
-  
-          <div class="right-side">
-              <h1>Keep in touch</h1>
-              <p>Never Miss a Beat! Sign up for our newsletter and be the first to hear about new products, professional resources, limited edition merchandise, discounts and more when you sign up for our emails</p>
-              <input type="email" placeholder="email@example.com" class="email">
-          </div>
-      </div>
+  </div>
 
-  </section>
-  
-  </body>
+  <footer class="footer">
+    <div class="container">
+      <div class="footer-info">
+        <div class="left-side">
+          <h1>THE LIBRARY STORE</h1>
+          <a href="">About Us</a>
+          <a href="">Contact Us</a>
+          <a href="">Library Foundation</a>
+          <a href="">Privacy Policy</a>
+          <a href="">Terms of Service</a>
+          <a href="">Refund policy</a>
+        </div>
+
+        <div class="middle-side">
+
+          <p>The Library Store is part of the Library Foundation of Pristina, which supports the Pristinas Public
+            Library</p>
+        </div>
+
+        <div class="right-side">
+          <h1>Keep in touch</h1>
+          <p>Never Miss a Beat! Sign up for our newsletter and be the first to hear about new products, professional
+            resources, limited edition merchandise, discounts and more when you sign up for our emails</p>
+          <input type="email" placeholder="email@example.com" class="email">
+        </div>
+      </div>
+    </div>
+  </footer>
+
+</body>
+
 </html>
