--- a/library.html
+++ b/library.html
@@ -20,6 +20,8 @@
                     <a href="./about.html">ABOUT</a>
                     <a href="./books.html">BOOKS</a>
                     <a href="./contact.html">CONTACT</a>
+                    <a href="./dashboard/books.html">DASHBOARD</a>
+
                 </ul>
                 <div class="icons">
                     <a href="#"><i class='bx bx-heart'></i></i></a>
